WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234349
[WebIDL] onselectionchange IDL attribute should not Document-reflect event listeners
https://bugs.webkit.org/show_bug.cgi?id=234349
Summary
[WebIDL] onselectionchange IDL attribute should not Document-reflect event li...
Alexey Shvayka
Reported
2021-12-15 08:55:11 PST
[WebIDL] onselectionchange IDL attribute should not Document-reflect event listeners
Attachments
Patch
(11.20 KB, patch)
2021-12-15 08:56 PST
,
Alexey Shvayka
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2021-12-15 08:56:43 PST
Created
attachment 447238
[details]
Patch
Alexey Shvayka
Comment 2
2021-12-15 11:35:16 PST
Comment on
attachment 447238
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447238&action=review
> Source/WebCore/ChangeLog:6 > + Reviewed by Darin Adler.
In
https://bugs.webkit.org/show_bug.cgi?id=234047
.
Alexey Shvayka
Comment 3
2021-12-15 11:38:08 PST
Committed
r287089
(
245281@trunk
): <
https://commits.webkit.org/245281@trunk
>
Radar WebKit Bug Importer
Comment 4
2021-12-15 11:39:19 PST
<
rdar://problem/86534730
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug