[WebIDL] onselectionchange IDL attribute should not Document-reflect event listeners https://bugs.webkit.org/show_bug.cgi?id=234349

Reviewed by Darin Adler.

Source/WebCore:

onselectionchange IDL attribute should not forward event listeners from <body> to Document because:
  a) the attribute is being standardized as a global event handler [1];
  b) "selectionchange" event should be emitted on Document only for selection changes of ranges [2],
     while it should bubble to <body> only when selection changes occur in <input> / <textarea> elements;
  c) HTML spec has no concept of reflecting event handlers to Document, only to Window [3].

While this patch aligns WebKit with Blink and Gecko, event listener forwarding is preserved for
"onselectionchange" content attribute in order to ensure web-compatibility in the following case:
  * a userland <body onselectionchange> listener that relies on `document.activeElement`
    to handle selection changes, including ones that occur in <input> / <textarea> elements.
This is caught by the fast/events/selectionchange-user-initiated.html test as well.

[1] https://w3c.github.io/selection-api/#extensions-to-globaleventhandlers-interface
[2] https://w3c.github.io/selection-api/#selectionchange-event
[3] https://html.spec.whatwg.org/multipage/webappapis.html#window-reflecting-body-element-event-handler-set

Test: fast/dom/event-handler-attributes.html

* html/HTMLBodyElement.cpp:
(WebCore::HTMLBodyElement::parseAttribute):
* html/HTMLBodyElement.idl:

LayoutTests:

* fast/dom/event-handler-attributes-expected.txt:
* fast/dom/event-handler-attributes.html:



Canonical link: https://commits.webkit.org/245281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287089 268f45cc-cd09-0410-ab3c-d52691b4dbfc